# c-plus-plus-samples

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
include/: string_utils.h  string_utils.hpp
src/: string_utils.c  string_utils.cpp
test/: string_utils_test.cpp
